<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/g_drive_action"
    android:orientation="vertical">

        <Button
            android:id="@+id/create_text_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_text_file" />

        <Button
            android:id="@+id/create_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_folder" />


        <Button
            android:id="@+id/search_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_file" />

        <Button
            android:id="@+id/search_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_folder" />

        <Button
            android:id="@+id/upload_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_file" />

        <Button
            android:id="@+id/download_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_file" />

        <Button
            android:id="@+id/delete_file_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_file" />

        <Button
            android:id="@+id/view_file_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_folder" />

    <TextView
        android:padding="8dp"
        android:gravity="center"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>